TestSuite/errors/err0127.pas
uses GraphABC;
type TRec = record
a : integer;
b : real;
end;

var 
s : TRec := (a:2;c:2.3);
begin
end.